# chat

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  client_starter.cpp
client/handlers/: talker_helper.cpp  talker_helper.hpp
client/structs/: Client.cpp  Client.hpp  client.cpp  client.hpp
cmake/: FindJSON.cmake
other_soft/lib_basics/: Request.hpp  Response.hpp  parcer_helper.hpp  request.hpp  response.hpp
server/: CMakeLists.txt  server_starter.cpp
server/handlers/: replies.cpp  replies.hpp
server/structs/: Server.cpp  Server.hpp  request.hpp  response.hpp  server.cpp  server.hpp  storages.cpp  storages.hpp
